fixed dark mode persistence

--- a/style.css
+++ b/style.css
@@ -27,13 +27,17 @@ body.dark-mode {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: background-color 1s ease,
+                color 1s ease,
+                border-color 1s ease,
+                box-shadow 1s ease;
 }
 
 body {
     font-family: "Poppins", sans-serif;
     color: var(--text-color);
     background-color: var(--background-color);
-    transition: background-color 1s ease, color 1s ease;
+    transition: all 1s ease;
 }
 
 html {
@@ -513,7 +517,7 @@ article .icon {
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
-    background:(250, 250, 250);
+    background: var(--background-color);
     margin: 2rem auto;
     padding: 0.5rem;
 }
@@ -528,6 +532,12 @@ article .icon {
 
 .contact-info-container p {
     font-size: larger;
+    margin: 0;
+    color: var(--text-color);
+}
+
+.contact-info-upper-container .contact-info-container p {
+    color: var(--text-color);
 }
 
 .contact-icon {
@@ -737,7 +747,7 @@ body.dark-mode .darkmode-label svg.moon {
     fill: #ccd6f6;
 }
 body {
-    transition: background-color 1s ease, color 1s ease;
+    transition: all 1s ease;
 }
 
 .logo,
@@ -931,6 +941,7 @@ body.dark-mode .contact-info-upper-container img {
     width: 100%;
     height: 100%;
     z-index: -1;
+    transition: background-color 1s ease;
 }
 
 /* Responsive Design */
